[tool.poetry]
name = "toxic_proxy"
version = "0.1.0"
description = "An asyncio tcp proxy for network resilience testing"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = [
    "Alexander Miasoiedov <msoedov@gmail.com>",
]
repository = "https://github.com/msoedov/toxic_proxy"
license = "MIT"
readme = "Readme.md"
keywords = ["resilience", "asyncio", "testing"]
packages = [{ include = "toxic_proxy", from = "." }]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
httpx = "^0.24.1"
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
